Tweaks for idp.

--- a/conf/fluentd.conf
+++ b/conf/fluentd.conf
@@ -28,6 +28,13 @@
     index_name myservice
     type_name myservice
   </match>
+  <match he.**>
+    @type elasticsearch
+    host elastic
+    port 9200
+    index_name he
+    type_name he
+  </match>
   <match **>
     @type file
     @id   output1
