--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,19 @@
 version: '2'
 services:
   myservice:
-    build: 
-      context: ./myservice
-      args:
-        - http_proxy=$http_proxy
-        - https_proxy=$https_proxy
-        - ftp_proxy=$ftp_proxy
-        - no_proxy=$no_proxy
-        - HTTP_PROXY=$HTTP_PROXY
-        - HTTPS_PROXY=$HTTPS_PROXY
-        - FTP_PROXY=$FTP_PROXY
-        - NO_PROXY=$NO_PROXY
+    build: ./myservice
     depends_on:
       - logger
     ports:
       - "3000:3000"
-
     volumes:
       - ./myservice:/usr/src/app
-
+    networks:
+      - logger_net
   logger:
     #image: fluent/fluentd:v0.14.8
     build:
       context: ./fluentd
-      args:
-        - http_proxy=$http_proxy
-        - https_proxy=$https_proxy
-        - ftp_proxy=$ftp_proxy
-        - no_proxy=$no_proxy
-        - HTTP_PROXY=$HTTP_PROXY
-        - HTTPS_PROXY=$HTTPS_PROXY
-        - FTP_PROXY=$FTP_PROXY
-        - NO_PROXY=$NO_PROXY
     ports:
       - "24224:24224"
     depends_on:
@@ -41,6 +22,8 @@ services:
       - ./conf:/fluentd/etc
     environment:
       - FLUENTD_CONF=fluentd.conf
+    networks:
+      - logger_net
   elastic:
     image: elasticsearch:2.4.1
     ports:
@@ -48,6 +31,8 @@ services:
       - "9300:9300"
     volumes:
       - ./esdata:/usr/share/elasticsearch/data
+    networks:
+      - logger_net
   kibana:
     image: kibana:4.6.1
     ports:
@@ -56,4 +41,7 @@ services:
       - elastic
     environment:
       - ELASTICSEARCH_URL=http://elastic:9200
-
+    networks:
+      - logger_net
+networks:
+  logger_net:
