--- a/dc.proxy.yml
+++ b/dc.proxy.yml
@@ -12,6 +12,15 @@ services:
         - HTTPS_PROXY=$HTTPS_PROXY
         - FTP_PROXY=$FTP_PROXY
         - NO_PROXY=$NO_PROXY
+    environment:
+        - http_proxy=$http_proxy
+        - https_proxy=$https_proxy
+        - ftp_proxy=$ftp_proxy
+        - no_proxy=${no_proxy},logger
+        - HTTP_PROXY=$HTTP_PROXY
+        - HTTPS_PROXY=$HTTPS_PROXY
+        - FTP_PROXY=$FTP_PROXY
+        - NO_PROXY=${NO_PROXY},logger
   logger:
     #image: fluent/fluentd:v0.14.8
     build:
@@ -25,3 +34,23 @@ services:
         - HTTPS_PROXY=$HTTPS_PROXY
         - FTP_PROXY=$FTP_PROXY
         - NO_PROXY=$NO_PROXY
+    environment:
+        - http_proxy=$http_proxy
+        - https_proxy=$https_proxy
+        - ftp_proxy=$ftp_proxy
+        - no_proxy=${no_proxy},elastic
+        - HTTP_PROXY=$HTTP_PROXY
+        - HTTPS_PROXY=$HTTPS_PROXY
+        - FTP_PROXY=$FTP_PROXY
+        - NO_PROXY=${NO_PROXY},elastic
+
+  kibana:
+    environment:
+        - http_proxy=$http_proxy
+        - https_proxy=$https_proxy
+        - ftp_proxy=$ftp_proxy
+        - no_proxy=${no_proxy},elastic
+        - HTTP_PROXY=$HTTP_PROXY
+        - HTTPS_PROXY=$HTTPS_PROXY
+        - FTP_PROXY=$FTP_PROXY
+        - NO_PROXY=${NO_PROXY},elastic
