--- a/fluentd/conf/fluentd.conf
+++ b/fluentd/conf/fluentd.conf
@@ -21,6 +21,12 @@
     time_slice_wait   1m
     time_format       %Y%m%dT%H%M%S%z
   </match>
+  <match authService.**>
+    @type elasticsearch
+    host elastic
+    port 9200
+    index_name authService
+    type_name authService
   <match demo.**>
     @type elasticsearch
     host elastic
@@ -28,21 +34,18 @@
     index_name demo
     type_name demo
   </match>
+  <match identityPortal.**>
+    @type elasticsearch
+    host elastic
+    port 9200
+    index_name identityPortal
+    type_name identityPortal
+  </match>
   <match he.**>
     @type elasticsearch
     host elastic
     port 9200
-    index_name he
-    type_name he
-  </match>
-  <match **>
-    @type file
-    @id   output1
-    path         /fluentd/log/data.*.log
-    symlink_path /fluentd/log/data.log
-    append       true
-    time_slice_format %Y%m%d
-    time_slice_wait   10m
-    time_format       %Y%m%dT%H%M%S%z
+    index_name hubotEnterprise
+    type_name hubotEnterprise
   </match>
 </label>
