Fixed typo in fluentd configuration.

--- a/fluentd/conf/fluentd.conf
+++ b/fluentd/conf/fluentd.conf
@@ -27,6 +27,7 @@
     port 9200
     index_name authService
     type_name authService
+  </match>
   <match demo.**>
     @type elasticsearch
     host elastic
